REGRESSION(215272): microbenchmark/seal-and-do-work and microbenchmark/freeze-and-do-work are 27x slower https://bugs.webkit.org/show_bug.cgi?id=170881

Reviewed by Saam Barati.

* runtime/ObjectConstructor.cpp:
(JSC::objectConstructorSeal):
(JSC::objectConstructorFreeze):
Restored fast paths for final objects that don't have indexed properties.


Canonical link: https://commits.webkit.org/187879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215471 268f45cc-cd09-0410-ab3c-d52691b4dbfc